force-app/main/default/objects/Adoption__c/fields/AdoptionDate__c.field-meta.xml
<CustomField>
    <fullName>AdoptionDate__c</fullName>
    <label>Adoption Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>