force-app/main/default/objects/Adoption__c/fields/AdoptionFee__c.field-meta.xml
<CustomField>
    <fullName>AdoptionFee__c</fullName>
    <label>Adoption Fee</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>