force-app/main/default/objects/Adoption__c/fields/AdoptionRate__c.field-meta.xml
<CustomField>
    <fullName>AdoptionRate__c</fullName>
    <label>Adoption Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>