force-app/main/default/objects/Adoption__c/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <description>If green the adoption occurred succesfully, if yellow the animal returned to shelter with a relevant reason and if red the animal returned to the shelter with an invalid reason</description>
    <inlineHelpText>Check green if the adoption was completed succesfully, yellow if the animal returned to shelter with a relevant reason and red the animal returned to shelter with an invalid reason.</inlineHelpText>
    <label>Attention Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Green</fullName>
                <default>true</default>
                <label>Green</label>
            </value>
            <value>
                <fullName>Yellow</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>