force-app/main/default/objects/Adoption__c/validationRules/AllowAdoptionsOnlyIfAdopterNotWarning.validationRule-meta.xml
<ValidationRule>
    <fullName>AllowAdoptionsOnlyIfAdopterNotWarning</fullName>
    <active>true</active>
    <description>The adopter is checked as Warning. The adoption can not be completed.</description>
    <errorConditionFormula>Adopter__r.Warning__c = true</errorConditionFormula>
    <errorMessage>The adopter is checked as Warning. The adoption can not be completed.</errorMessage>
</ValidationRule>